force-app/main/default/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_MOC_Application_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E-MOC Application No.</label>
        <referenceTo>E_MOC_Application__c</referenceTo>
        <relationshipLabel>Order</relationshipLabel>
        <relationshipName>Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_PISUser__c</fullName>
        <formula>IF(NOT(ISBLANK(Responsible_person_PISUser__r.User__r.Employee_Id__c)), Responsible_person_PISUser__r.User__r.Employee_Id__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Text__c</fullName>
        <formula>Equipment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equipment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finished_Date__c</fullName>
        <label>Finished Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Functional_Location_Description__c</fullName>
        <formula>Functional_Location__r.Description__c</formula>
        <label>Functional Location Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Location_Text__c</fullName>
        <label>Functional Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Functional Location</label>
        <referenceTo>Functional_Location__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Integration_Message__c</fullName>
        <label>Integration Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LINK__c</fullName>
        <formula>HYPERLINK(&quot;/lightning/cmp/c__THOR_OrderRecordDisplay?c__recordId=&quot;+ Id 
										&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
														IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
														+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
														+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
														+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
														+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
										)+1,1)
										&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
														IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
														+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
														+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
														+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
														+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
										)+1,1)
										&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
														IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
														+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
														+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
														+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
														+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
										)+1,1)
										,&quot;LINK TO RECORD&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LINK</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>IF(ISBLANK(Equipment__c), Functional_Location__r.Location__c, Equipment__r.location__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center_Text__c</fullName>
        <label>Main Work Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Work Center</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Orders (Main Work Center)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maintenance_Plant__c</fullName>
        <formula>IF(ISBLANK(Equipment__c), Functional_Location__r.Maintenance_Plant__r.Code__c, Equipment__r.maintenancePlant__r.Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintenance Plant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Text__c</fullName>
        <formula>Notification__r.Notification_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification</label>
        <referenceTo>Notification__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <externalId>true</externalId>
        <label>Order Number</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_Status_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Status Set</label>
        <referenceTo>Master_Map_Set__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>REL</fullName>
                </value>
                <value>
                    <fullName>MSCP</fullName>
                </value>
                <value>
                    <fullName>MSPT</fullName>
                </value>
                <value>
                    <fullName>AVAC</fullName>
                </value>
                <value>
                    <fullName>ESTC</fullName>
                </value>
                <value>
                    <fullName>PRT</fullName>
                </value>
                <value>
                    <fullName>PPRT</fullName>
                </value>
                <value>
                    <fullName>CNF</fullName>
                </value>
                <value>
                    <fullName>PCNF</fullName>
                </value>
                <value>
                    <fullName>PCST</fullName>
                </value>
                <value>
                    <fullName>NCMP</fullName>
                </value>
                <value>
                    <fullName>PRC</fullName>
                </value>
                <value>
                    <fullName>SETC</fullName>
                </value>
                <value>
                    <fullName>TECO</fullName>
                </value>
                <value>
                    <fullName>CLSD</fullName>
                </value>
                <value>
                    <fullName>RELR</fullName>
                </value>
                <value>
                    <fullName>DLFL</fullName>
                </value>
                <value>
                    <fullName>CSER</fullName>
                </value>
                <value>
                    <fullName>GMPS</fullName>
                </value>
                <value>
                    <fullName>LKD</fullName>
                </value>
                <value>
                    <fullName>MACM</fullName>
                </value>
                <value>
                    <fullName>MANC</fullName>
                </value>
                <value>
                    <fullName>MEBS</fullName>
                </value>
                <value>
                    <fullName>NMAT</fullName>
                </value>
                <value>
                    <fullName>WCM</fullName>
                </value>
                <value>
                    <fullName>WOCO</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CM01</fullName>
                </value>
                <value>
                    <fullName>PM01</fullName>
                </value>
                <value>
                    <fullName>SH01</fullName>
                </value>
                <value>
                    <fullName>CR01</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PM_Activity_Type_Text__c</fullName>
        <formula>PM_Activity_Type__r.Name + &quot; &quot; + PM_Activity_Type__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Activity_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PM Activity Type</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planning_Plant_Text__c</fullName>
        <formula>Planning_Plant__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planning Plant Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_Plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planning Plant</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Orders (Planning Plant)</relationshipLabel>
        <relationshipName>Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plant_Section__c</fullName>
        <formula>IF(NOT(ISBLANK(Equipment__c)), Equipment__r.plantSection__c, Functional_Location__r.PlantSection__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plant Section</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
                <value>
                    <fullName>Immediately</fullName>
                </value>
                <value>
                    <fullName>Float Time - 1M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 3M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 6M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 9M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 12M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 15M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 18M</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requester_PISUser_Text__c</fullName>
        <description>Host Id or Home Id for sync data to SAP Integration</description>
        <label>Requester Text</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_PISUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>Order</relationshipLabel>
        <relationshipName>Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <formula>IF(NOT(ISBLANK(Requester_PISUser__r.User__r.Employee_Id__c)), Requester_PISUser__r.User__r.Employee_Id__c, &apos;&apos;)</formula>
        <label>Requestor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponsiblePersonText__c</fullName>
        <formula>Responsible_person_PISUser__r.ENFIRSTNAME__c + &apos; &apos; + Responsible_person_PISUser__r.ENLASTNAME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Responsible Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponsiblePerson_PISUser_Text__c</fullName>
        <description>Host Id or Home Id for sync data to SAP Integration</description>
        <label>Responsible Person Text</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Person_ID__c</fullName>
        <formula>Responsible_Person_Name__r.Employee_Id__c</formula>
        <label>Responsible Person ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Person_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Person Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsible_person_PISUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible person</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>Order (Responsible person)</relationshipLabel>
        <relationshipName>Order1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsible_person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Order_Number__c</fullName>
        <label>Sub-Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Order_Text__c</fullName>
        <formula>Super_Order__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Super Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Super Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Sub Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Status_Text__c</fullName>
        <defaultValue>&apos;CRTD&apos;</defaultValue>
        <label>System Status Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Status_Text__c</fullName>
        <label>User Status Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Status__c</fullName>
        <label>User Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBS__c</fullName>
        <label>WBS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Clearance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Clearance</label>
        <referenceTo>Work_Clearance__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>groupcount__c</fullName>
        <label>Group Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grouptask__c</fullName>
        <label>Group Task</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isIRPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isIRPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSOAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSOAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mainWorkCenterPlantText__c</fullName>
        <formula>mainWorkCenterPlant__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>mainWorkCenterPlantText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mainWorkCenterPlant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>mainWorkCenterPlant</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Order (mainWorkCenterPlant)</relationshipLabel>
        <relationshipName>Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wbs_element__c</fullName>
        <formula>E_MOC_Application_No__r.wbs_element__c</formula>
        <label>Budget Number (WBS element)</label>
        <type>Text</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order_Number__c</columns>
        <columns>Description__c</columns>
        <columns>Order_Status__c</columns>
        <columns>Notification__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Functional_Location__c</columns>
        <columns>Functional_Location_Text__c</columns>
        <columns>Planning_Plant__c</columns>
        <columns>Order_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Requester__c</columns>
        <columns>ResponsiblePersonText__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>10962504</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>